deployment/k8s/catalog-service-green.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-service-green
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalog-service
      color: green
  template:
    metadata:
      labels:
        app: catalog-service
        color: green
    spec:
      containers:
        - name: catalog-service
          # Update the image tag below to the latest commit hash from the docker hub registry
          image: paritosh4495/csc8113bookstore-catalog-service:ab2a2e4
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
          resources:
            requests:
              memory: "500Mi"
              cpu: "250m"
            limits:
              memory: "700Mi"
              cpu: "1000m"
          livenessProbe:
            httpGet:
              path: "/actuator/health/liveness"
              port: 8081
            initialDelaySeconds: 60
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8081
            initialDelaySeconds: 45
            periodSeconds: 20
