deployment/k8s/catalog-service-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: catalog-service
spec:
  selector:
    app: catalog-service
    color: green
  ports:
    - port: 8081
      targetPort: 8081
