deployment/k8s/catalog-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: catalog-service
spec:
  selector:
    app: catalog-service
    color: blue
  ports:
    - port: 8081
      targetPort: 8081

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-service-blue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalog-service
      color: blue
  template:
    metadata:
      labels:
        app: catalog-service
        color: blue
    spec:
      containers:
        - name: catalog-service

          image: paritosh4495/csc8113bookstore-catalog-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
          resources:
            requests:
              memory: "500Mi"
              cpu: "250m"
            limits:
              memory: "700Mi"
              cpu: "1000m"
          livenessProbe:
            httpGet:
              path: "/actuator/health/liveness"
              port: 8081
            initialDelaySeconds: 60
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8081
            initialDelaySeconds: 45
            periodSeconds: 20
