deployment/k8s/keycloak.yml
---

apiVersion: v1
kind: Service
metadata:
  name: keycloak
spec:
  selector:
    app: keycloak
  ports:
    - port: 9191
      targetPort: 9191

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:26.5.0
          args:
            - "start-dev"
            - "--http-port=9191"
            - "--import-realm"
            - "--http-relative-path=/auth"
          ports:
            - containerPort: 9191
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "1000m"
          volumeMounts:
            - name: realm-volume
              mountPath: /opt/keycloak/data/import/realm.json
              subPath: realm.json
      volumes:
        - name: realm-volume
          configMap:
            name: keycloak-realm-config
